fixed navbar spacing issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -335,16 +335,12 @@ blockquote {
       display: none;
     }
 
-    #about-tabs-phone {
-      display: none;
-    }
-
     #footer-phone {
       display: none;
     }
 
     .scrollable {
-      height: 78vh;
+      height: 65vh;
       margin: 1em 0 0 0;
     }
 
